Check for minimum playtime, multiple dbs use